--- a/pandoc.css
+++ b/pandoc.css
@@ -18,7 +18,7 @@ color: #444;
 	margin: auto;
 	max-width: 42em;
 	background: #ffffff;
-	box-shadow:0 0 0 1000px #002f2f
+	box-shadow:0 0 0 1000px #2f2f2f
 }
 
 a {
