--- a/style.css
+++ b/style.css
@@ -2,16 +2,23 @@
 	position: absolute;
 	top: 0;
 	left: 0px;
-	width: 30%;
+	width: 25%;
 	height: 100%;
+	opacity: 0.0;
+	z-index: 100;
 	/*border-right: 2px solid #fff;*/
+}
+#left:hover {
+	opacity: 0.8;
+	background-color: #ffffff;
 }
 #right {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 70%;
+	width: 100%;
 	height: 100%;
+	z-index: 50;
 	/*border-left: 0px solid #fff;*/
 }
 #navibody {
