--- a/style.css
+++ b/style.css
@@ -4,13 +4,9 @@
 	left: 0px;
 	width: 25%;
 	height: 100%;
-	opacity: 0.0;
+	opacity: 0.8;
 	z-index: 100;
 	/*border-right: 2px solid #fff;*/
-}
-#left:hover {
-	opacity: 0.8;
-	background-color: #ffffff;
 }
 #right {
 	position: absolute;
@@ -28,7 +24,7 @@
 }
 #navidiv {
 	font-family: "Arial", "Serif";
-	font-size: 14px;
+	font-size: 16px;
 	white-space: nowrap;
 	background: #eee;
 	overflow-x: hidden;
@@ -52,4 +48,34 @@ a:visited {
 	text-decoration: none;
 	color: #000000;
 	display: flex;
+}
+
+button {
+	position: absolute;
+	top: 40%;
+	left: 100%;
+	height: 75px;
+	width: 20px;
+	padding: 0px;
+	border: 0;
+	background: #efefef;
+	color: #000;
+	cursor: pointer;
+	::-moz-focus-inner{ border: 0; }
+}
+aside {
+	z-index: 100;
+	width: 20%;
+	position: fixed;
+	left: 0;
+	top: 0px;
+	bottom: 0;
+	background: #d4d4d4;
+	transition: right 2s ease;
+}
+.open {
+	left: 0px;
+}
+.close {
+	left: -20%;
 }
