--- a/style.css
+++ b/style.css
@@ -18,15 +18,15 @@
 	/*border-left: 0px solid #fff;*/
 }
 #navibody {
-	background: #eee;
 	overflow: hidden;
+	background: rgba(255, 255, 255, 0.0);
 	margin: 0px;
 }
 #navidiv {
 	font-family: "Arial", "Serif";
 	font-size: 16px;
+	color: #fff;
 	white-space: nowrap;
-	background: #eee;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	margin-left: 2%;
@@ -40,28 +40,27 @@ iframe {
 	height: 100%;
 	width: 100%;
 }
+a {
+	color: #ffaf00;
+}
 a:link {
 	text-decoration: none;
-	color: #000000;
 }
 a:visited {
 	text-decoration: none;
-	color: #000000;
 	display: flex;
 }
 
-button {
+#btn {
 	position: absolute;
-	top: 40%;
+	top: 45%;
 	left: 100%;
-	height: 75px;
-	width: 20px;
+	height: 60px;
+	line-height: 60px;
+	width: 15px;
 	padding: 0px;
-	border: 0;
-	background: #efefef;
-	color: #000;
+	background: #fa0;
 	cursor: pointer;
-	::-moz-focus-inner{ border: 0; }
 }
 aside {
 	z-index: 100;
@@ -70,7 +69,6 @@ aside {
 	left: 0;
 	top: 0px;
 	bottom: 0;
-	background: #d4d4d4;
 	transition: right 2s ease;
 }
 .open {
