--- a/pandoc.css
+++ b/pandoc.css
@@ -12,11 +12,17 @@ html {
 body {
 	font-family: "Arial", "Serif";
 	font-size: 14px;
+	color: #ffaf00;
 	line-height: 1.2;
 	padding: 2em;
 	margin: auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #ffaf00;
 	max-width: 42em;
-	background: #ffffff;
+	background: #000000;
 	box-shadow:0 0 0 1000px #000
 }
 
@@ -74,7 +80,7 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6 {
-color: #111;
+color: #fff;
 	line-height: 100%;
 	/*	margin-top: 2em; */
 	font-weight: normal;
@@ -109,7 +115,8 @@ h6 {
 }
 
 blockquote {
-	color: #666666;
+	color: #f0a;
+	background: #000;
 	margin: 0;
 	padding-left: 3em;
 	border-left: 0.5em #EEE solid;
