fix th bg color

--- a/pandoc.css
+++ b/pandoc.css
@@ -231,7 +231,7 @@ table {
 
 table th {
 	padding: .2em 1em;
-	background-color: #eee;
+	background-color: #234;
 	border-top: 1px solid #ddd;
 	border-left: 1px solid #ddd;
 }
