scrollbar color support chromium

--- a/pandoc.css
+++ b/pandoc.css
@@ -29,6 +29,16 @@ body {
 :root {
 	scrollbar-color: #ffaf00 #222;
 }
+::-webkit-scrollbar-track {
+	background-color: #222;
+}
+::-webkit-scrollbar {
+	width: 12px;
+	background-color: #222;
+}
+::-webkit-scrollbar-thumb {
+	background-color: #ffaf00;
+}
 
 a {
 	color: #f00;
