--- a/pandoc.css
+++ b/pandoc.css
@@ -260,7 +260,7 @@ table td {
 
 .author {
 	font-size: 1.2em;
-	text-align: center;
+	text-align: left;
 }
 
 @media only screen and (min-width: 480px) {
